# Toy-Language-Interpreter

arith/_build/: log
arith/_build/default/lib/: arith.cma  arith.cmxa  arith.cmxs
arith/lib/: interp.ml
checked/lib/: checker.ml  interp.ml
explicit-refs/_build/: log
explicit-refs/_build/default/lib/: explicit_refs.cma  explicit_refs.cmxa  explicit_refs.cmxs  interp.ml
explicit-refs/lib/: bt_add.exr  bt_find.exr  bt_max.exr  ds.ml
let/_build/: log
let/_build/default/lib/: interp.ml  let.cma  let.cmxa  let.cmxs
let/lib/: ds.ml
proc/lib/: ds.ml  dune
